tests/snapshots/compile__wgsl_color_muxnumber_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_checkerboard3_color1: vec4f,
    u_control_checkerboard3_color2: vec4f,
    u_control_checkerboard3_frequency: f32,
    u_control_checkerboard4_color1: vec4f,
    u_control_checkerboard4_color2: vec4f,
    u_control_checkerboard4_frequency: f32,
    u_control_checkerboard5_color1: vec4f,
    u_control_checkerboard5_color2: vec4f,
    u_control_checkerboard5_frequency: f32,
    u_control_checkerboard6_color1: vec4f,
    u_control_checkerboard6_color2: vec4f,
    u_control_checkerboard6_frequency: f32,
    u_control_vignette7_radius: f32,
    u_control_vignette7_softness: f32,
    u_opt_muxnumber1_mode: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn checkerboard3_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard3_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard3_color1;
    let c2 = u.u_control_checkerboard3_color2;
    return mix(c1, c2, checker);
}

fn checkerboard4_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard4_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard4_color1;
    let c2 = u.u_control_checkerboard4_color2;
    return mix(c1, c2, checker);
}

fn checkerboard5_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard5_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard5_color1;
    let c2 = u.u_control_checkerboard5_color2;
    return mix(c1, c2, checker);
}

fn checkerboard6_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard6_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard6_color1;
    let c2 = u.u_control_checkerboard6_color2;
    return mix(c1, c2, checker);
}

fn vignette7_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette7_radius;
    let softness = max(u.u_control_vignette7_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn muxnumber1_output(uv: vec2f) -> vec4f {
    var colors = array<vec4f, 4>(checkerboard3_output(uv), checkerboard4_output(uv), checkerboard5_output(uv), checkerboard6_output(uv));
    let s = vignette7_mask(uv);
    if (u.u_opt_muxnumber1_mode == 1) {
        let f = clamp(s, 0.0, 3.0);
        let i = i32(floor(f));
        return mix(colors[i], colors[min(i + 1, 3)], fract(f));
    }
    let channel = i32(floor_mod(floor(s), 4.0));
    return colors[channel];
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return muxnumber1_output(uv);
}
