tests/snapshots/compile__wgsl_color_posterize_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_checkerboard3_color1: vec4f,
    u_control_checkerboard3_color2: vec4f,
    u_control_checkerboard3_frequency: f32,
    u_control_vignette4_radius: f32,
    u_control_vignette4_softness: f32,
    u_control_vignette5_radius: f32,
    u_control_vignette5_softness: f32,
    u_control_vignette6_radius: f32,
    u_control_vignette6_softness: f32,
    u_control_vignette7_radius: f32,
    u_control_vignette7_softness: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn checkerboard3_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard3_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard3_color1;
    let c2 = u.u_control_checkerboard3_color2;
    return mix(c1, c2, checker);
}

fn vignette4_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette4_radius;
    let softness = max(u.u_control_vignette4_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette5_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette5_radius;
    let softness = max(u.u_control_vignette5_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette6_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette6_radius;
    let softness = max(u.u_control_vignette6_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette7_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette7_radius;
    let softness = max(u.u_control_vignette7_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn posterize1_output(uv: vec2f) -> vec4f {
    let scale = max(floor(vignette7_mask(uv)), 1.0);
    let pixel = uv * (720.0 * 0.5);
    let cellPixel = floor(pixel / scale);
    let posterizeUV = (cellPixel * scale + scale * 0.5) / (720.0 * 0.5);
    let threshold = fract(sin(dot(posterizeUV * 1000.0, vec2f(12.9898, 78.233))) * 43758.5453);
    let color = unpremultiply(checkerboard3_output(posterizeUV));
    let levels = max(vignette4_mask(posterizeUV), 1.0);
    let gammaVal = max(vignette6_mask(posterizeUV), 1e-4);
    var ramped = pow(max(color.rgb, vec3f(0.0)), vec3f(gammaVal));
    ramped += (threshold - 0.5) * (vignette5_mask(posterizeUV));
    let stepped = floor(ramped * levels + 0.5) / levels;
    let restored = pow(max(stepped, vec3f(0.0)), vec3f(1.0 / gammaVal));
    return premultiply(vec4f(clamp(restored, vec3f(0.0), vec3f(1.0)), color.a));
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return posterize1_output(uv);
}
