tests/snapshots/compile__wgsl_color_posterize_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_posterize1_dither: f32,
    u_control_posterize1_gamma: f32,
    u_control_posterize1_levels: f32,
    u_control_posterize1_scale: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn posterize1_output(uv: vec2f) -> vec4f {
    let scale = max(floor(u.u_control_posterize1_scale), 1.0);
    let pixel = uv * (720.0 * 0.5);
    let cellPixel = floor(pixel / scale);
    let posterizeUV = (cellPixel * scale + scale * 0.5) / (720.0 * 0.5);
    let threshold = fract(sin(dot(posterizeUV * 1000.0, vec2f(12.9898, 78.233))) * 43758.5453);
    let color = unpremultiply(defaultUvMap(posterizeUV));
    let levels = max(u.u_control_posterize1_levels, 1.0);
    let gammaVal = max(u.u_control_posterize1_gamma, 1e-4);
    var ramped = pow(max(color.rgb, vec3f(0.0)), vec3f(gammaVal));
    ramped += (threshold - 0.5) * (u.u_control_posterize1_dither);
    let stepped = floor(ramped * levels + 0.5) / levels;
    let restored = pow(max(stepped, vec3f(0.0)), vec3f(1.0 / gammaVal));
    return premultiply(vec4f(clamp(restored, vec3f(0.0), vec3f(1.0)), color.a));
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return posterize1_output(uv);
}
