tests/snapshots/compile__wgsl_color_rgba_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_rgba1_a: f32,
    u_control_rgba1_b: f32,
    u_control_rgba1_g: f32,
    u_control_rgba1_r: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn rgba1_output(uv: vec2f) -> vec4f {
    return vec4f(u.u_control_rgba1_r, u.u_control_rgba1_g, u.u_control_rgba1_b, u.u_control_rgba1_a);
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return rgba1_output(uv);
}
